--- a/docs/development/frontend/ui-design-system.mdx
+++ b/docs/development/frontend/ui-design-system.mdx
@@ -172,6 +172,20 @@ Use `AlertDialog` for forms in modals:
 
 ## Button Patterns
 
+### Loading States
+Buttons now include built-in loading state functionality. For comprehensive loading button documentation, see the [Button Loading States Guide](/development/frontend/ui-design-button-loading).
+
+```html
+<!-- Button with loading state -->
+<Button 
+  :loading="isSubmitting"
+  loading-text="Saving..."
+  @click="handleSave"
+>
+  Save Changes
+</Button>
+```
+
 ### Primary Actions
 ```html
 <Button @click="handlePrimaryAction">
@@ -192,18 +206,24 @@ Use `AlertDialog` for forms in modals:
 <Button 
   variant="destructive" 
   @click="handleDelete"
+  :loading="isDeleting"
+  loading-text="Deleting..."
   class="bg-destructive text-destructive-foreground hover:bg-destructive/90"
 >
-  <Trash2 class="h-4 w-4 mr-2" />
+  <Trash2 v-if="!isDeleting" class="h-4 w-4 mr-2" />
   {{ t('actions.delete') }}
 </Button>
 ```
 
 ### Icon-Only Buttons
 ```html
-<Button variant="ghost" class="h-8 w-8 p-0">
+<Button 
+  variant="ghost" 
+  size="icon"
+  :loading="isRefreshing"
+>
   <span class="sr-only">{{ t('actions.menu') }}</span>
-  <MoreHorizontal class="h-4 w-4" />
+  <MoreHorizontal v-if="!isRefreshing" class="h-4 w-4" />
 </Button>
 ```
 
